2004-01-15  Gerard Klaver <gerard at gkall dot hobby dot nl>

	* include/sane/saneopts.h: Added options WHITE_LEVEL_R, WHITE_LEVEL_G,
	                           and WHITE_LEVEL_B.
	* doc/sane-teco2.man: changed --white-level to white-level-r, -g, -b
	                      update text
	* backend/teco2.c: changed WHITE_LEVEL to WHITE_LEVEL_R, _G and _B,
	                   changed calibration part for the VM3564, VM356A and
			   VM3575 (subtract highest and lowest value and then
			   divide).
	* backend/teco2.h: changed WHITE_LEVEL to WHITE_LEVEL_R, _G, _B.

2004-01-14  Gerhard Jaeger <gerhard@gjaeger.de>
	* backend/u12.c: Fixed preview bug.

2004-01-14  Gerhard Jaeger <gerhard@gjaeger.de>
	* descriptions/u12.desc: fixed wrong man-page reference, status updates.
	* backend/u12.c backend/u12.h backend/u12-hwdef.h backend/u12-scanner.h
	  backend/u12-*.c: bump up version, fixed device autodetection and corrupted
	  pictures, improved model-detection.

2004-01-13  Karl Heinz Kremer <khk@khk.net>
	*  backend/epson-usb.c: Added product ID for RX-500

2004-01-13  Gerhard Jaeger <gerhard@gjaeger.de>
	* doc/sane-plustek_pp.man: added missing explanation. Bug #300441.
	* include/sane/sanei_thread.h: updated copyright info.
	* sanei/sanei_thread.c: fixed return value handling for sanei_wait_pid().

2004-01-12  Karl Heinz Kremer <khk@khk.net>

	* backend/epson.c: Fixed bug # 300444 - Changed OPT_CCT_( desc. string.

2004-01-12  Oliver Rauch <oliver.rauch@rauch-domain.de>
	* backend/umax backend/Makefile.in: repleaced fork routines by sanei_thread
	* doc/umax/umax.CHANGES updated

2004-01-12  Matthew Duggan <stauff1@users.sourceforge.net>

	* backend/canon_pp-dev.c backend/canon_pp-io.c backend/canon_pp.c
	  backend/canon_pp.h: Fix various compile warnings (Bug #300407).
	  Also fix bug in parsing config file.
	* doc/descriptions/canon_pp.desc: Bump version number.

2004-01-11  Henning Meier-Geinitz <henning@meier-geinitz.de>
