@@ -1,3 +1,11 @@
+2004-01-15  Eddy De Greef <eddy_de_greef at tiscali dot be>
+
+	* backend/mustek_pp.c, backend/mustek_pp_cis.c: Bug fix: make sure 
+          that the child process releases the parallel port under all 
+          circumstances. Otherwise, the parent process may no longer be 
+          able to control the scanner and the lamp stays on and doesn't
+          return home.
+          
 2004-01-15  Gerard Klaver <gerard at gkall dot hobby dot nl>
 
 	* include/sane/saneopts.h: Added options WHITE_LEVEL_R, WHITE_LEVEL_G,
